Fix link colors, logo anchor, and temp-perma-dark mode

--- a/src/components/Guides/index.module.css
+++ b/src/components/Guides/index.module.css
@@ -77,6 +77,7 @@
 }
 
 .wrapper a {
+    color: rgb(87, 182, 208);
     text-decoration: none;
     overflow-wrap: break-word;
 }
